<resources>
    <string name="app_name">Smart Trips</string>
    <string name="intro_msg">Hey! Let\'s get started...</string>
    <string name="source_location">Source Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="next">Next</string>
    <string name="round_trip">Round Trip ?</string>
    <string name="todo">TODO</string>
    <string name="tripDetails">Trip</string>
    <string name="errorSrcDest">Please enter source and destination address to proceed</string>
    <string name="errorRoute">An error occurred while fetching the route. Please go back and try again.</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>

    <string name="drive">Drive</string>
    <string name="bicycle">Bicycle</string>
    <string name="walk">Walk</string>
    <string name="transit">Transit</string>
    <string name="mode">Mode </string>
    <string name="miles">miles </string>
    <string name="saveTrip">Save Trip</string>
    <string name="tripSaved">Your trip is saved</string>
    <string name="shareTrip">Share trip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_along">Search along the route</string>
    <string name="popular">Popular</string>
    <string name="restaurant">Restaurants</string>
    <string name="charger">Charging Points</string>
    <string name="gas">Gas Stations</string>
    <!-- Strings used for fragments for navigation -->
    <string name="placeTitle">Place Title</string>
    <string name="filter_added">All the selections are added to the trip</string>
    <string name="distance1">Distance: 10 miles</string>
    <string name="time1">Time: 20 min</string>
    <string name="add_places_along_the_route">Add places along the route</string>
    <string name="add_places_along_the_route2">Add %1$s along the route</string>
    <string name="opening">Open</string>
    <string name="closed">Closed</string>
    <string name="waypointsupdated">Waypoints updated successfully</string>
    <string name="logout">logout</string>
    <string name="revoke_access">revoke access</string>
    <string name="welcome">Welcome</string>
    <string name="signinWithGoogle">Sign In With Google</string>
    <string name="continueWithoutSignin">Continue Guest</string>
    <string name="or">OR</string>
    <string name="tripHistory">Trip History</string>
    <string name="title_activity_trip_history">TripHistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tripHistory_list">Trip History</string>
    <string name="collapse">Collapse Details</string>
    <string name="expand">Expand Details</string>
    <string name="tripTimestamp">Trip Date</string>
    <string name="totalTime">Total Time</string>
    <string name="totalDistance">Total Distance</string>





</resources>