<?xml version="1.0" encoding="utf-8"?>
<!--  Single List Item Design -->

<!-- <TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/label"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    android:textSize="16dip"
    android:textStyle="bold" >
</TextView> -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/history_item_view"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="10dp"
android:clickable="true"
android:focusable="true"
app:cardBackgroundColor="@color/white"
app:cardCornerRadius="8dp"
app:cardElevation="8dp"
app:cardMaxElevation="10dp"
app:cardPreventCornerOverlap="true"
app:cardUseCompatPadding="false">

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="136dp">


    <TextView
        android:id="@+id/historyTitleView"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/placeTitle"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/historyDistance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.70"
        app:layout_constraintStart_toEndOf="@+id/historyImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tripMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_baseline_directions_car_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingPrefix" />

    <TextView
    android:id="@+id/historyTime"
    android:layout_width="0dp"
    android:layout_height="22dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:text="@string/totalTime"
    android:textAlignment="textStart"
    app:layout_constraintBottom_toTopOf="@+id/tripTimestamp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.70"
    app:layout_constraintStart_toEndOf="@+id/historyImageView"
    app:layout_constraintTop_toBottomOf="@+id/historyDistance" />

<TextView
    android:id="@+id/historyDistance"
    android:layout_width="0dp"
    android:layout_height="22dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:text="@string/totalDistance"
    android:textAlignment="textStart"
    app:layout_constraintBottom_toTopOf="@+id/historyTime"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.70"
    app:layout_constraintStart_toEndOf="@+id/historyImageView"
    app:layout_constraintTop_toBottomOf="@+id/historyTitleView" />

    <ImageView
        android:id="@+id/historyImageView"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_outline"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/todo"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/historyTitleView"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/bg1" />

    <TextView
    android:id="@+id/tripTimestamp"
    android:layout_width="0dp"
    android:layout_height="22dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="8dp"
    android:text="@string/tripTimestamp"
    android:textAlignment="textStart"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.70"
    app:layout_constraintStart_toEndOf="@+id/historyImageView"
    app:layout_constraintTop_toBottomOf="@+id/historyTime" />


</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView><!--<TextView-->
    <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:id="@+id/titleView"-->
    <!--    android:textSize="26sp"-->
    <!--    android:paddingStart="16dp"-->
    <!--    android:paddingEnd="16dp"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content">-->

    <!--</TextView>-->