<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/titleView"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/placeTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="29dp"
            android:layout_height="21dp"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.787" />

        <TextView
            android:id="@+id/time"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            android:text="@string/time1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.719"
            app:layout_constraintStart_toEndOf="@+id/titleView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.866" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:text="@string/distance1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.719"
            app:layout_constraintStart_toEndOf="@+id/titleView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
<!--<TextView-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:id="@+id/titleView"-->
<!--    android:textSize="26sp"-->
<!--    android:paddingStart="16dp"-->
<!--    android:paddingEnd="16dp"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content">-->

<!--</TextView>-->
