<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SecondActivity"
    tools:showIn="@layout/activity_second">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="@id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:justifyContent="space_evenly"> <!-- or "space_between", "space_around" -->
                <TextView
                    android:id="@+id/mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/mode"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/distanceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_distance_20" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_baseline_access_time_20" />
            </com.google.android.flexbox.FlexboxLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="@id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/search_along"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:weightSum="1.0">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/popular"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight=".5"
                        android:drawableTop="@drawable/ic_baseline_stars_24"
                        android:gravity="bottom|center"
                        android:text="@string/popular"
                        app:cornerRadius="6dp"
                        app:strokeColor="@color/teal_700" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/restaurant"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight=".5"
                        android:drawableTop="@drawable/ic_baseline_restaurant_24"
                        android:gravity="bottom|center"
                        android:text="@string/restaurant"
                        app:cornerRadius="6dp"
                        app:strokeColor="@color/teal_700" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:weightSum="1.0">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/charger"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight=".5"
                        android:drawableTop="@drawable/ic_baseline_electrical_services_24"
                        android:gravity="bottom|center"
                        android:text="@string/charger"
                        app:cornerRadius="6dp"
                        app:strokeColor="@color/teal_700" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/gas"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight=".5"
                        android:drawableTop="@drawable/ic_baseline_local_gas_station_24"
                        android:gravity="bottom|center"
                        android:text="@string/gas"
                        app:cornerRadius="6dp"
                        app:strokeColor="@color/teal_700" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/mapLayout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4"
            app:layout_constraintVertical_bias="0.0">

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
        </LinearLayout>


        <!--        <include-->
        <!--            layout="@layout/fragment_maps"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="400dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.0"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/cardView3"-->
        <!--            app:layout_constraintVertical_bias="0.0" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    <TextView-->
    <!--        android:id="@+id/nestedscrolltextview"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="16dp"-->
    <!--        android:text="@string/large_text" />-->

</androidx.core.widget.NestedScrollView>
